# technical-test

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  LICENCE  Pipfile  README.md  pyproject.toml  tox.ini
.github/workflows/: coverage.yml  pre-commit.yml
src/triangles/: __init__.py  accumulate.py  checks.py  main.py  read.py  write.py
tests/: conftest.py  example.txt  example_output.txt  test_accumulate.py  test_main.py  test_read.py  test_write.py
tests/data/: example.txt  example_output.txt  large_example.txt  large_example_output.txt
